Increase search form width on smaller screen widths to avoid cutting off placeholder text on api.jquerymobile.com

--- a/themes/jquery/css/base.css
+++ b/themes/jquery/css/base.css
@@ -2586,7 +2586,7 @@ html.jquery-learning { background: #000 url(../i/learning_bg.jpg) no-repeat cent
 		float: none;
 		clear: left;
 		margin: 0 auto;
-		width: 200px;
+		width: 225px;
 	}
 	#container header nav .searchform input {
 		text-align: center;
